--- a/templates/base/auth_base.html
+++ b/templates/base/auth_base.html
@@ -2,15 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    {% block seo %}
+    {% include 'partials/seo_tags.html' with title=title robot=True%}
+    {% endblock seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Authentication forms">
-    <meta name="author" content="">
-
-    <title></title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/accounts/style-1.css' %}">
-
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicons/favicon.ico' %}">
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/accounts/style-2.css' %}">
