fix seo on langing page

--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -18,12 +18,11 @@
                                         businesses may
                                         not have the type of online presence to follow up new
                                         customers.
-                                        Agapeer is a robust platform for convenient Airtime
-                                        Recharge/Data funding
+                                        Agapeer is a robust platform for convenient Airtime and Data funding
                                     </p>
                                     <div class="banner-btn d-flex">
                                         <div class="play-btn">
-                                            <a href="{% url 'about_page' %}" class="btn">Learn More</a>
+                                            <a title="About us" href="{% url 'about_page' %}" class="btn">Learn More</a>
                                         </div>
                                     </div>
                                     <!--"banner-btn-->
@@ -104,7 +103,7 @@
                 <div class="col-md-12">
                     <!-- main play group start -->
                     <div class="play-group">
-                        <a class="video-link" href="https://www.youtube.com/embed/qsJYrwzfd6w" data-width="1200"
+                        <a title="Youtube video" class="video-link" href="https://www.youtube.com/embed/qsJYrwzfd6w" data-width="1200"
                             data-height="1080"><i class="fas fa-play"></i></a>
                         <h5>We are changing the market trend</h5>
                     </div><!-- main play group end -->
@@ -131,7 +130,7 @@
                         <!-- button start -->
                         <div class="sub-btn d-flex">
                             <div class="play-btn mission">
-                                <a href="#!" class="btn">Learn More</a>
+                                <a title="About us" href="{% url 'about_page' %}" class="btn">Learn More</a>
                             </div>
                         </div><!-- button end -->
                     </div><!-- left side text end-->
@@ -164,7 +163,7 @@
                         <!-- button start -->
                         <div class="sub-btn d-flex ">
                             <div class="play-btn">
-                                <a href="#!" class="btn">Learn More</a>
+                                <a title="About us" href="{% url 'about_page' %}" class="btn">Learn More</a>
                             </div>
                         </div><!-- button end -->
                     </div><!-- right side text end -->
@@ -198,7 +197,7 @@
                 <div class="col-md-2">
                     <div class="reason-work-btn d-flex">
                         <div class="play-btn">
-                            <a href="{% url 'contact_page' %}" class="btn">Contact us</a>
+                            <a title="Contact us" href="{% url 'contact_page' %}" class="btn">Contact us</a>
                         </div>
                     </div>
                 </div>
