--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,4 +1,7 @@
 {% extends 'base/auth_base.html' %}
+{% block seo %}
+{% include 'partials/seo_tags.html' with title="Forgotten Password | Can&#039;t Log In" robot=True desc="Agapeer account recovery process"%}
+{% endblock seo %}
 {% block auth_form %}
 <form method='POST' action="{% url 'account_reset_password' %}" class="reset-password-form">
     {% block form_text %}
