--- a/templates/base/auth_base.html
+++ b/templates/base/auth_base.html
@@ -38,7 +38,7 @@
         <div class="forny-inner">
             <div class="forny-form">
                 <div class="mb-8 text-center forny-logo">
-                    <img src="{% static 'landing/assets/img/logo-n.png' %}" %}">
+                    <img src="{% static 'landing/assets/img/logo-n.png' %}" alt="Agapeer logo">
                 </div>
                 {% block auth_text %}
                 {% endblock auth_text %}
