--- a/templates/base/landing_base.html
+++ b/templates/base/landing_base.html
@@ -79,7 +79,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="footer-icon">
                         <div class="footer-img">
-                            <img src="{% static 'landing/assets/img/logo-n.png' %}" alt="logo">
+                            <img src="{% static 'landing/assets/img/logo-n.png' %}" alt="Agapeer logo">
                         </div>
                         <div class="footer-para">
                             <p>Ochui Princewill © {{ current_year }}. All Rights Reserved</p>
