--- a/templates/partials/landing_navbar.html
+++ b/templates/partials/landing_navbar.html
@@ -3,7 +3,7 @@
     <header id="top-header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <a class="navbar-brand" href="{% url 'landing_page' %}"><img
-                    src="{% static 'landing/assets/img/logo-n.png' %}" alt="logo"></a>
+                    src="{% static 'landing/assets/img/logo-n.png' %}" alt="Agapeer logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
