--- a/templates/partials/seo_tags.html
+++ b/templates/partials/seo_tags.html
@@ -1,6 +1,10 @@
 <meta name="title" content="{{title}}">
 <meta name="description" content="Agapeer is a robust platform for convenient Airtime Recharge/Data funding">
-<meta name="keywords" content="airtime, buy airtime online, airtime app, airtime top up, airtime transfer, free recharge, recharge it now, idea online recharge, get free airtime, free data, free data app, airtel free data, mtn free data, glo free data, 9mobile free data">
+{% if desc %}
+<meta name="description" content="{{desc}}">
+{% else %}
+<meta name="description" content="Agapeer is a robust platform for convenient Airtime Recharge/Data funding">
+{% endif %}
 {% if robot %}<meta name="robots" content="index, follow">{% else %}{% endif %}
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
