added canonical links

--- a/templates/base/auth_base.html
+++ b/templates/base/auth_base.html
@@ -5,6 +5,7 @@
     {% block seo %}
     {% include 'partials/seo_tags.html' with title=title robot=True%}
     {% endblock seo %}
+    <link rel="canonical" href="{{ CANONICAL_PATH }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/accounts/style-1.css' %}">
