--- a/templates/partials/seo_tags.html
+++ b/templates/partials/seo_tags.html
@@ -1,9 +1,8 @@
 <meta name="title" content="{{title}}">
-<meta name="description" content="Agapeer is a robust platform for convenient Airtime Recharge/Data funding">
 {% if desc %}
 <meta name="description" content="{{desc}}">
 {% else %}
-<meta name="description" content="Agapeer is a robust platform for convenient Airtime Recharge/Data funding">
+<meta name="description" content="Agapeer is a robust platform for convenient Peer-to-Peer Airtime Recharge/Data funding">
 {% endif %}
 {% if robot %}<meta name="robots" content="index, follow">{% else %}{% endif %}
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
