added forum links

--- a/spirit/core/templates/spirit/_footer.html
+++ b/spirit/core/templates/spirit/_footer.html
@@ -6,7 +6,7 @@
 {% spaceless %}
   <footer class="footer">
     <div class="footer-container">
-      <a class="footer-logo" href="http://www.spirit-project.com">Spirit</a>
+      <a class="footer-logo" href="{% url 'dashboard' %}">Dashboard</a>
     </div>
   </footer>
 {% endspaceless %}
