--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -138,7 +138,7 @@
                 <div class="col-md-6 col-sm-12 col-12">
                     <!-- right side img start -->
                     <div class="mission-img">
-                        <img src="{% static 'landing/assets/img/mission.png' %}" alt="img"
+                        <img src="{% static 'landing/assets/img/mission.webp' %}" alt="img"
                             class="img img-responsive m-1">
                     </div><!-- right side img end -->
                 </div>
@@ -148,7 +148,7 @@
                 <div class="col-md-6 col-sm-12 col-12">
                     <!-- left img start -->
                     <div class="vision-img">
-                        <img src="{% static 'landing/assets/img/vision.png' %}" alt="icon">
+                        <img src="{% static 'landing/assets/img/vision.webp' %}" alt="icon">
                     </div><!-- left img end -->
                 </div>
                 <div class="col-md-6 col-sm-12 col-12">
