converted some images to webp

--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -435,7 +435,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                     <div class="card-2">
                         <div class="news-2-img">
-                            <img src="{% static 'landing/assets/img/news/2.png' %}" alt="img">
+                            <img src="{% static 'landing/assets/img/news/2.webp' %}" alt="img">
                         </div>
                         <div class="news-head-text">
                             <h4><a href="#!">A Fruitful Retirement: Social Security Benefit</a></h4>
@@ -450,7 +450,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                     <div class="card-2 news-mr-tr">
                         <div class="news-2-img">
-                            <img src="{% static 'landing/assets/img/news/3.png' %}" alt="img">
+                            <img src="{% static 'landing/assets/img/news/3.webp' %}" alt="img">
                         </div>
                         <div class="news-head-text">
                             <h4><a href="#!">A Fruitful Retirement: Social Security Benefit</a></h4>
@@ -465,7 +465,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12  di-no">
                     <div class="card-2 news-mr-tr">
                         <div class="news-2-img">
-                            <img src="{% static 'landing/assets/img/news/3.png' %}" alt="img">
+                            <img src="{% static 'landing/assets/img/news/3.webp' %}" alt="img">
                         </div>
                         <div class="news-head-text">
                             <h4><a href="#!">A Fruitful Retirement: Social Security Benefit</a></h4>
