--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -420,7 +420,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                     <div class="card-2">
                         <div class="news-2-img">
-                            <img src="{% static 'landing/assets/img/news/3.png' %}" alt="img">
+                            <img src="{% static 'landing/assets/img/news/3.webp' %}" alt="img">
                         </div>
                         <div class="news-head-text">
                             <h4><a href="#">A Fruitful Retirement: Social Security Benefit</a></h4>
