--- a/templates/landing/about.html
+++ b/templates/landing/about.html
@@ -88,7 +88,7 @@
 				<div class="col-md-6">
 					<!-- right side img start -->
 					<div class="mission-img">
-						<img src="{% static 'landing/assets/img/mission.png' %}" alt="img" class="img img-responsive m-1">
+						<img src="{% static 'landing/assets/img/mission.webp' %}" alt="img" class="img img-responsive m-1">
 					</div><!-- right side img end -->
 				</div>
 			</div> <!-- row 1 end -->
@@ -97,7 +97,7 @@
 				<div class="col-md-6">
 					<!-- left img start -->
 					<div class="vision-img">
-						<img src="{% static 'landing/assets/img/vision.png' %}" alt="icon">
+						<img src="{% static 'landing/assets/img/vision.webp' %}" alt="icon">
 					</div><!-- left img end -->
 				</div>
 				<div class="col-md-6">
