--- a/templates/landing/contact.html
+++ b/templates/landing/contact.html
@@ -45,7 +45,7 @@
 						<div class="con-1">
 							<div class="con-al-info">
 								<img src="{% static 'landing/assets/img/contact/1.png' %}" alt="img" class="img-responsive">
-								<p>Royel 27 khulna 9100, Bangladesh</p>
+								<p>Faculty of Engineering University of Uyo</p>
 							</div>
 						</div>
 					</div>
@@ -54,8 +54,7 @@
 							<div class="con-al-info mc-ac-ca">
 								<img src="{% static 'landing/assets/img/contact/2.png' %}" alt="img" class="img-responsive">
 								<div class="con-info">
-									<p>+123 (2486) 567</p>
-									<p>+123 (2486) 567</p>
+									<p>+234 (090) 32251989</p>
 								</div>
 							</div>
 						</div>
@@ -65,8 +64,8 @@
 							<div class="con-al-info">
 								<img src="{% static 'landing/assets/img/contact/3.png' %}" alt="img" class="img-responsive">
 								<div class="con-info-2">
-									<p>mailexample@gmail.com</p>
-									<p>infomail@gmail.com</p>
+									<p>support@agapeer.me</p>
+									<p>agapeer.me@gmail.com</p>
 								</div>
 							</div>
 						</div>
