--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -277,7 +277,7 @@
     </section>
     <!-- Subscribe are end -->
 
-    <!-- testimonial area start -->
+    {% comment %} <!-- testimonial area start -->
     <section id="testimonial">
         <div class="content-box-m">
             <div class="content-title">
@@ -404,7 +404,7 @@
             </div>
         </div>
     </section>
-    <!-- Testinomal area end-->
+    <!-- Testinomal area end--> {% endcomment %}
 
     <!-- News & Articles are start -->
     <section id="news-area">
