--- a/templates/account/email/password_reset_key_message.html
+++ b/templates/account/email/password_reset_key_message.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-
-	{% load account %}{% user_display user as user_display %}{% load i18n %}{% autoescape off %}{% blocktrans with site_name=current_site.name site_domain=current_site.domain %}{% now "Y" as current_year %}
+	{% now "Y" as current_year %}
+	{% load account %}{% user_display user as user_display %}{% load i18n %}{% autoescape off %}{% blocktrans with site_name=current_site.name site_domain=current_site.domain %}
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="format-detection" content="telephone=no">
@@ -725,7 +725,7 @@
 									<div class="o_px-xs" style="padding-left: 8px;padding-right: 8px;">
 										<p class="o_text-xs o_text-sans o_text-muted o_mt-md o_mb-md" data-color="Text Muted" data-size="Text XS" data-min="12" data-max="18" style="font-family: Arial,&quot;Helvetica Neue&quot;,Helvetica,sans-serif;word-break: break-word;color: #687887;margin-top: 24px;margin-bottom: 24px;font-size: 14px;line-height: 21px;">
 											You're receiving this e-mail because you or someone else has requested a password for your user account.
-											It can be safely ignored if you did not request a password reset. Click the link below to reset your password.{% endblocktrans %}
+											It can be safely ignored if you did not request a password reset. Click the link or button below to reset your password.{% endblocktrans %}
 
 											{{ password_reset_url }}
 
