added bing verification header

--- a/templates/partials/seo_tags.html
+++ b/templates/partials/seo_tags.html
@@ -1,3 +1,4 @@
+<meta name="msvalidate.01" content="2AD29387E9A767B741A590EDB020DDB0" />
 <meta name="title" content="{{title}}">
 {% if desc %}
 <meta name="description" content="{{desc}}">
