level reminder task

--- a/templates/account/email/email_confirmation_message.html
+++ b/templates/account/email/email_confirmation_message.html
@@ -285,7 +285,7 @@
 													</tr>
 													<tr>
 														<td class="o_bg-white o_text o_text-sans o_text-dark o_p-icon o_br-max" data-bgcolor="White" data-color="Text Dark" style="font-family: Arial,&quot;Helvetica Neue&quot;,Helvetica,sans-serif;word-break: break-word;background-color: #ffffff;color: #212932;border-radius: 56px;padding: 12px;font-size: 16px;line-height: 24px;">
-															<img class="o_br-max" src="https://www.dropbox.com/s/cg3doo31mwf6d1w/icon_mail.gif" width="88" height="88" alt="Mail Envolope" style="max-width: 88px;border-radius: 56px;-ms-interpolation-mode: bicubic;display: block;border: 0;line-height: 100%;height: auto;outline: none;text-decoration: none;">
+															<img class="o_br-max" src="https://i.imgur.com/6YPykIE.gif" width="88" height="88" alt="Mail Envolope" style="max-width: 88px;border-radius: 56px;-ms-interpolation-mode: bicubic;display: block;border: 0;line-height: 100%;height: auto;outline: none;text-decoration: none;">
 														</td>
 													</tr>
 
