--- a/templates/account/email/password_reset_key_message.html
+++ b/templates/account/email/password_reset_key_message.html
@@ -2,7 +2,7 @@
 
 <head>
 	{% now "Y" as current_year %}
-	{% load account %}{% user_display user as user_display %}{% load i18n %}{% autoescape off %}{% blocktrans with site_name=current_site.name site_domain=current_site.domain %}
+	{% load account %}{% user_display user as user_display %}{% load i18n %}{% blocktrans with site_name=current_site.name site_domain=current_site.domain %}
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="format-detection" content="telephone=no">
@@ -691,7 +691,7 @@
 													</tr>
 													<tr>
 														<td class="o_bg-white o_text o_text-sans o_text-dark o_p-icon o_br-max" data-bgcolor="White" data-color="Text Dark" style="font-family: Arial,&quot;Helvetica Neue&quot;,Helvetica,sans-serif;word-break: break-word;background-color: #ffffff;color: #212932;border-radius: 56px;padding: 12px;font-size: 16px;line-height: 24px;">
-															<img class="o_br-max" src="https://www.dropbox.com/s/cy8e1blva8v22aa/icon_lock.gif" width="88" height="88" alt="Mail lock" style="max-width: 88px;border-radius: 56px;-ms-interpolation-mode: bicubic;display: block;border: 0;line-height: 100%;height: auto;outline: none;text-decoration: none;">
+															<img class="o_br-max" src="https://i.imgur.com/fiKbasS.gif" width="88" height="88" alt="Mail lock" style="max-width: 88px;border-radius: 56px;-ms-interpolation-mode: bicubic;display: block;border: 0;line-height: 100%;height: auto;outline: none;text-decoration: none;">
 														</td>
 													</tr>
 
